maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:2: error: Missing closing brace `}' assumed here
var sommeAngle:Int = 0;
^Escaper:2: error: expected class or object definition
var sommeAngle:Int = 0;
^Escaper:3: error: expected class or object definition
var gau:Boolean = true;
^Escaper:5: error: expected start of definition
override def run() {
         ^Escaper:18: error: expected class or object definition
def isDirectionFree(dir:Direction) : Boolean = {
^Escaper:30: error: expected class or object definition
def isDirectionFree2(dir:Direction) : Boolean = {
^Escaper:48: error: expected class or object definition
def keepHandOnSideWall() {
^